// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/processor.js @composes should allow composing classes from the composed file 1`] = `
Object {
  "a": Array [
    "mc_wooga",
    "mc_a",
  ],
  "b": Array [
    "mc_b",
  ],
  "wooga": Array [
    "mc_wooga",
  ],
}
`;

exports[`/processor.js @composes should allow for chains of @composes-included files 1`] = `
Object {
  "a": Array [
    "mc_wooga",
    "mc_notblue",
    "mc_a",
  ],
  "b": Array [
    "mc_wooga",
    "mc_b",
  ],
  "notblue": Array [
    "mc_wooga",
    "mc_notblue",
  ],
  "wooga": Array [
    "mc_wooga",
  ],
}
`;

exports[`/processor.js @composes should include compositions from the composed file 1`] = `
Object {
  "packages/processor/test/specimens/at-composes.css": Object {
    "a": Array [
      "mc_a",
    ],
    "b": Array [
      "mc_wooga",
      "mc_b",
    ],
    "wooga": Array [
      "mc_wooga",
    ],
  },
  "packages/processor/test/specimens/simple.css": Object {
    "wooga": Array [
      "mc_wooga",
    ],
  },
}
`;

exports[`/processor.js @composes should include exported classes from the composed file 1`] = `
Object {
  "a": Array [
    "mc_a",
  ],
  "b": Array [
    "mc_b",
  ],
  "booga": Array [
    "mc_booga",
  ],
  "looga": Array [
    "mc_booga",
    "mc_looga",
  ],
}
`;

exports[`/processor.js @composes should include exported classes from the composed file 2`] = `
"/* packages/processor/test/specimens/folder/folder.css */
.mc_folder { margin: 2px; }
/* packages/processor/test/specimens/local.css */
.mc_booga { background: green; }
/* packages/processor/test/specimens/at-composes.css */
.mc_a {
    color: aqua;
}
.mc_b {
    color: blue;
}
"
`;

exports[`/processor.js @composes should include external compositions from the composed file 1`] = `
Object {
  "packages/processor/test/specimens/at-composes.css": Object {
    "a": Array [
      "mc_a",
    ],
    "b": Array [
      "mc_booga",
      "mc_wooga",
      "mc_b",
    ],
    "booga": Array [
      "mc_booga",
    ],
    "tooga": Array [
      "mc_tooga",
    ],
    "wooga": Array [
      "mc_booga",
      "mc_wooga",
    ],
  },
  "packages/processor/test/specimens/folder/folder.css": Object {
    "folder": Array [
      "mc_folder",
    ],
  },
  "packages/processor/test/specimens/local.css": Object {
    "booga": Array [
      "mc_booga",
    ],
    "looga": Array [
      "mc_booga",
      "mc_looga",
    ],
  },
  "packages/processor/test/specimens/start.css": Object {
    "booga": Array [
      "mc_booga",
    ],
    "tooga": Array [
      "mc_tooga",
    ],
    "wooga": Array [
      "mc_booga",
      "mc_wooga",
    ],
  },
}
`;

exports[`/processor.js @composes should not include exported values from the composed file 1`] = `Object {}`;

exports[`/processor.js @composes should output css from the composed file 1`] = `
"/* packages/processor/test/specimens/simple.css */
.mc_wooga { color: red; }
/* packages/processor/test/specimens/at-composes.css */
.mc_a {
    color: aqua;
}
.mc_b {
    color: blue;
}
"
`;
